# techsight-cli

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/techsight/: __init__.py  cli.py  collector.py  detector.py  enricher.py  output.py  signatures.py
src/techsight/data/: _custom.json
tests/: test_basic.py
