[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "techsight"
version = "0.1.0"
description = "Free tech stack detection CLI — 7,500+ technologies via HTTP fingerprinting, no API keys required"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Mitchell Keller", email = "mitch@leadgrow.com" }]

dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "dnspython>=2.4",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "respx>=0.21",
]

[project.scripts]
techsight = "techsight.cli:cli"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
